<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    tools:context=".view.DiscoverFragment">

    <ScrollView
        android:id="@+id/scroll_view_discover"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Add SearchView -->
            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="Search by Tag"
                app:iconifiedByDefault="false"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Add RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigationView"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="30dp" />

    <FrameLayout
        android:id="@+id/DiscoverFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </FrameLayout>
</RelativeLayout>
