<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    >

        <ImageView
            android:id="@+id/image"
            android:layout_marginLeft="100dp"
            android:layout_width="200dp"
            android:layout_height="300dp" />

</LinearLayout>
