...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Add SearchView -->
            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="Search by Tag"
                app:iconifiedByDefault="false"
                app:layout_constraintTop_toTopOf="parent" />

...
